# bcchat

./: CMakeLists.txt  README.md  bcchat.cpp  bcchat.h  bcchat_messagefield.cpp  bcchat_messagefield.h  bcchat_opts.cpp  bcchat_opts.h  bcchat_stat.cpp  bcchat_stat.h  de.ts  main.cpp  resources.qrc
